classDiagram

class User {
    +int id
    +string nom
    +string email
    +string password
    +Role role
}

class Arbitre {
    +int id
    +string nom
    +string prenom
    +string nationalite
    +string confederation
    +string categorie
    +int experience
    +string statut
}

class Match {
    +int id
    +date date
    +string stade
    +string ville
    +string phase
}

class Affectation {
    +int id
    +string fonction
    +int arbitreId
    +int matchId
}

User : role = admin
User : role = commissaire
User : role = arbitre
User : role = consultation

Arbitre "1" --> "0..*" Affectation
Match "1" --> "0..*" Affectation